			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ENHANCED: realised native Win32 guarding of thread message queues,
    sponsored by SSS (www.sss.co.nz).

  * FIXED: Recorded database handling of attributed variables (could loose
    attributes on some terms).

  * ADDED: Support for attributed variables and cyclic terms for =@= and
    \=@=.


VERSION 5.3.18 (August 16, 2004)
================================

  * MODIFIED: perform goal expansion relative to indicated module for
    goals of the format Module:Goal where Module is known at compiletime.


VERSION 5.3.17 (August 2, 2004)
===============================

  * FIXED: source-location handling for if -> then if then holds control
    structures.  Alan Baljeu.

  * FIXED: global-variables related GC bug.  Thanks to David Reitter for
    producing an reproducable case.

  * FIXED: reconsulting a file with dynamic predicate declaration no
    longer deletes the clauses added with assert.

  * CLEANUP: Many stylistic issues to the C-source, removing warnings
    especially for Sun CC.  Richard O'Keefe.

  * ADDED: nb_setarg/3 and nb_linkarg/3, providing non-backtrackable
    assignments on terms.

  * ADDED: cycle-check in bagof/setof code handling existential bindings
    (should be an error!?).

  * ADDED: Support for cyclic terms in the recorded term representation,
    providing cyclic-safe recorda/3, findall/3, bagof/3, setof/3, exceptions
    and Prolog terms in XPCE objects.

  * ADDED: inf/infinite for stack options in create_thread/3 as well as for
    the `High' in between/3.

  * ENHANCED: use right-recursion optimisation in $e_free_variables/2
    used by bagof/3 and setof/3.  Alan Baljeu.

  * FIXED: Avoid "Loading module ... abolished: ..." messages when